--- a/Practica02_DSW/listicle.html
+++ b/Practica02_DSW/listicle.html
@@ -1,60 +1,153 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
+
 <head>
-  <title>4 paradigmas de programación que deberías aprender hoy en día</title>
-  <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="indice.css">
+    <link rel="icon" href="Images/icono.ico">
+    <title>Práctica 02 Corzo</title>
+    <header>
+        <h1>Los 4 paradigmas de programación más importantes que debes aprender</h1>
+    </header>
 </head>
+
 <body>
-  <header>
-    <h1 class="title">4 paradigmas de programación que deberías aprender hoy en día</h1>
-    <div class="profile">
-      <img class="avatar" src="images/vrk.png" alt="Alejandro Corzo">
-      <p class="name">Victoria Kirst</p>
-      <p class="last-update">Última actualización: 7 de abril de 2017</p>
+    <div class="perfil">
+        <div class="perfil-foto"> </div>
+        <div class="perfil-texto"> <strong> Alex Corzo Zent </strong></div>
     </div>
-  </header>
-  <main>
-    <ul>
-      <li>
-        <h2 class="number">1</h2>
-        <h2 class="title">Programación imperativa</h2>
-        <p>La programación imperativa es el paradigma de programación más común. En la programación imperativa, el programador especifica los pasos exactos que debe seguir la computadora para resolver un problema.</p>
-        <ul class="advantages">
-          <li><strong>Ventajas:</strong> Es fácil de aprender y entender.</li>
-          <li><strong>Desventajas:</strong> Puede ser difícil de mantener y escalar.</li>
-        </ul>
-      </li>
-      <li>
-        <h2 class="number">2</h2>
-        <h2 class="title">Programación declarativa</h2>
-        <p>La programación declarativa describe el resultado deseado, en lugar de los pasos necesarios para lograrlo. La programación declarativa es más abstracta que la programación imperativa, pero también es más flexible y escalable.</p>
-        <ul class="advantages">
-          <li><strong>Ventajas:</strong> Es más flexible y escalable que la programación imperativa.</li>
-          <li><strong>Desventajas:</strong> Puede ser más difícil de aprender y entender.</li>
-        </ul>
-      </li>
-      <li>
-        <h2 class="number">3</h2>
-        <h2 class="title">Programación orientada a objetos</h2>
-        <p>La programación orientada a objetos (POO) organiza el software en torno a objetos. Los objetos tienen atributos y métodos que definen su comportamiento. La POO es un paradigma de programación poderoso que puede ayudar a crear software más modular y mantenible.</p>
-        <ul class="advantages">
-          <li><strong>Ventajas:</strong> Es más modular y mantenible que la programación imperativa.</li>
-          <li><strong>Desventajas:</strong> Puede ser más difícil de aprender y entender.</li>
-        </ul>
-      </li>
-      <li>
-        <h2 class="number">4</h2>
-        <h2 class="title">Programación funcional</h2>
-        <p>La programación funcional se basa en funciones puras, que no tienen efectos secundarios. Las funciones puras son fáciles de entender y probar, lo que hace que la programación funcional sea un buen enfoque para crear software seguro y confiable.</p>
-        <ul class="advantages">
-          <li><strong>Ventajas:</strong> Es más segura y confiable que la programación imperativa.</li>
-          <li><strong>Desventajas:</strong> Puede ser más difícil de aprender y entender.</li>
-        </ul>
-      </li>
-    </ul>
-  </main>
-  <footer>
-    <p>Este artículo fue creado por Bard, un gran modelo de lenguaje de Google AI.</p>
-  </footer>
+
+    <div class="paragraph-break"></div>
+
+    <section>
+        <div class="cuerpo">
+            <div class="lenguaje">
+                <div class="contenedor-numero">
+                    <div class="numero">1.-</div>
+                </div>
+
+                <div class="header-lenguaje">PROGRAMACIÓN IMPERATIVA</div>
+                <a href="https://beecrowd.io/es/blog/paradigmas-de-programacion/"> Aqui puedes conocer más sobre este estilo de programación</a>
+
+                <p class="item-text">
+                    Este paradigma se basa en una secuencia de pasos para resolver un problema.
+                    En este enfoque, el programador describe un paso a paso detallado de lo que debe cumplir la computadora.
+                    Este paradigma es de los más comunes y los más importantes para tener las bases como un programador.
+                </p>
+                <p class="item-text">
+                   Ejemplos de lenguajes de programación que siguen un enfoque imperativo incluyen C, C++, Java y Python (aunque Python también admite otros paradigmas).
+                   La programación imperativa es uno de los paradigmas más antiguos y ampliamente utilizados en la programación, y es especialmente útil
+                   para tareas donde es importante controlar de manera precisa el flujo de ejecución y el estado de los datos.
+
+                </p>
+
+                <div class="recomendation">
+                    <h3 id="recomendacion">Recomendacion:</h3>
+                    <h3>Programación imperativa en la vida de los programadores</h3>
+                </div>
+
+                <img src="images/imperativa.jpg" class="images_l">
+            </div>
+
+            <div class="lenguaje">
+                <div class="contenedor-numero">
+                    <div class="numero">2.</div>
+                </div>
+
+                <div class="header-lenguaje">Programación orientada a objetos (POO)</div>
+                <a href="https://desarrolloweb.com/articulos/499.php"> Conoce más acerca de POO</a>
+
+                <p class="item-text">
+                    Este paradigma se basa en la utilización de objetos y sus interacciones para diseñar aplicaciones y programas.
+                    Los objetos son instancias de clases, que contienen datos (atributos) y código (métodos).
+                </p>
+                <p class="item-text">
+                    Ejemplos de lenguajes de programación que son orientados a objetos incluyen Java, C++, Python, C#, Ruby, y muchos más.
+                    La Programación Orientada a Objetos se utiliza ampliamente en el desarrollo de software porque ayuda a organizar
+                    y estructurar el código de una manera más modular, facilita la reutilización de código y se adapta bien a
+                    la representación de sistemas complejos y el modelado de objetos del mundo real.
+                </p>
+
+                <div class="recomendation">
+                    <h3 id="recomendacion">Recomendación:</h3>
+                    <h3>Las bases y los principios de la programación orientada a objetos</h3>
+                </div>
+
+                <img src="images/poo.jpg" class="images_l">
+            </div>
+
+            <div class="lenguaje">
+                <div class="contenedor-numero">
+                    <div class="numero">3.</div>
+                </div>
+
+                <div class="header-lenguaje">Programación declarativa</div>
+                <a href="https://www.ecured.cu/Programación_declarativa"> Conoce más acerca de la programación de clarativa y sus características</a>
+
+                <p class="item-text">
+                    La programación declarativa es un paradigma de programación en el que se describe lo que se quiere lograr, en lugar de especificar cómo lograrlo.
+                    En este enfoque, se declaran las relaciones y las restricciones entre los datos, y se confía en el sistema de
+                    ejecución para determinar la mejor manera de alcanzar el resultado deseado.
+                    La programación declarativa se centra en la declaración de hechos y reglas, y no en la
+                    secuencia de comandos o instrucciones detalladas.
+                </p>
+                <p class="item-text">
+                    La programación declarativa es especialmente útil en situaciones en las que se necesita una mayor abstracción y concisión,
+                    como en el procesamiento de datos, la manipulación de bases de datos y la resolución de problemas matemáticos.
+                    Sin embargo, no es la elección ideal para todas las tareas de programación y puede ser menos
+                    intuitiva en algunos casos en comparación con la programación imperativa.
+                </p>
+
+                <div class="recomendation">
+                    <h3 id="recomendacion">Recomendation:</h3>
+                    <h3>Programación declarativa y su enfoque filosofico</h3>
+                </div>
+
+                <img src="images/declarativa.jpg" class="images_l">
+            </div>
+
+            <div class="lenguaje">
+                <div class="contenedor-numero">
+                    <div class="numero">4.</div>
+                </div>
+
+                <div class="header-lenguaje">Programación funcional</div>
+                <a href=""> Aqui puedes saber más sobre la programación funcional y el por que se piensa que es de los paradigmas más dificles de aprender</a>
+
+                <p class="item-text">
+                    La programación funcional es un paradigma de programación que se basa en el concepto de funciones matemáticas y
+                    trata la computación como una evaluación de funciones.
+                    Se centra en el uso de funciones para modelar y resolver problemas de programación, y en la aplicación
+                    de conceptos matemáticos, como el cálculo lambda, para lograr un código más limpio, conciso y predecible.
+
+                </p>
+                <p class="item-text">
+                    Ejemplos de lenguajes de programación que son funcionalmente orientados incluyen Haskell, Lisp, Erlang,
+                    Scala y partes de JavaScript (con su soporte para funciones de orden superior y lambdas).
+                    La programación funcional se utiliza en situaciones donde la concurrencia, la inmutabilidad y la composición
+                    de funciones son importantes, como en sistemas distribuidos, procesamiento de datos y desarrollo de software de alta confiabilidad.
+                </p>
+
+                <div class="recomendation">
+                    <h3 id="recomendacion">Recomendación:</h3>
+                    <h3>Funciones para resolver ejercicios de Programación funcional</h3>
+                </div>
+                <img src="images/funcional.png" class="images_l">
+            </div>
+
+            <div class="lenguaje">
+                <div class="header-lenguaje">Conclusión</div>
+
+                <p class="item-text">
+                   La elección del paradigma de programación adecuado depende del tipo de proyecto que estés abordando y de tus preferencias personales.
+                   En la práctica, muchos programadores utilizan múltiples paradigmas en un solo proyecto para aprovechar las fortalezas de cada uno.
+                   Es importante comprender los fundamentos de cada paradigma y seleccionar el enfoque que mejor se adapte a los requisitos
+                   y objetivos de tu proyecto específico. También es valioso ser un programador versátil que pueda adaptarse a diferentes paradigmas según sea necesario.
+                </p>
+
+            </div>
+        </div>
+    </section>
+
 </body>
+
 </html>
